--- a/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
+++ b/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 176,
    "metadata": {
     "scrolled": false
    },
@@ -1666,7 +1666,7 @@
     "ax[1].set_xticks(range(2010,2110,10)); ax[1].set_xticklabels([\"\",2020,\"\",2040,\"\",2060,\"\",2080,\"\",2100], fontsize=12)\n",
     "ax[1].set_xlabel(\"Year\", fontsize=12); ax[1].set_ylabel(\"Annual Least-Cost\\n(billion 2010$US)\", fontsize=12)\n",
     "ylims = ax[1].get_ylim(); top = ylims[1]*1.02; ax[1].text(2010,top, panels[pan], fontsize=12);\n",
-    "#fig.savefig(plotdir+\"/baseline_comparison_ssprcp.pdf\", bbox_inches='tight')\n"
+    "fig.savefig(plotdir+\"/baseline_comparison_ssprcp.pdf\", bbox_inches='tight')\n"
    ]
   },
   {
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1897,7 +1897,7 @@
        "9           27.02  325.64  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
        "9           15.84  183.62  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2148,7 +2148,7 @@
        "9           29.15  463.96  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
        "9           35.59  425.63  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -2382,14 +2382,168 @@
        "9          135.20  1021.93  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scen = (5,85); print(scen)\n",
-    "np.round(dfs[scen][[\"FloodOptimal\",\"WetlandOptimal\",\"InundationOptimal\",\"RetreatOptimal\",\"ProtectOptimal\",\"Total\"]].iloc[idx_plot],2)"
+    "np.round(dfs[scen][[\"FloodOptimal\",\"WetlandOptimal\",\"InundationOptimal\",\"RetreatOptimal\",\"ProtectOptimal\",\"Total\"]].iloc[idx_plot],2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FloodOptimal</th>\n",
+       "      <th>WetlandOptimal</th>\n",
+       "      <th>InundationOptimal</th>\n",
+       "      <th>RetreatOptimal</th>\n",
+       "      <th>ProtectOptimal</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.005</td>\n",
+       "      <td>0.174</td>\n",
+       "      <td>0.493</td>\n",
+       "      <td>0.142</td>\n",
+       "      <td>0.186</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.472</td>\n",
+       "      <td>0.318</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>0.086</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.278</td>\n",
+       "      <td>0.459</td>\n",
+       "      <td>0.133</td>\n",
+       "      <td>0.115</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.354</td>\n",
+       "      <td>0.425</td>\n",
+       "      <td>0.116</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.016</td>\n",
+       "      <td>0.224</td>\n",
+       "      <td>0.467</td>\n",
+       "      <td>0.161</td>\n",
+       "      <td>0.132</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FloodOptimal  WetlandOptimal  InundationOptimal  RetreatOptimal  \\\n",
+       "1         0.005           0.174              0.493           0.142   \n",
+       "3         0.050           0.472              0.318           0.075   \n",
+       "5         0.015           0.278              0.459           0.133   \n",
+       "7         0.010           0.354              0.425           0.116   \n",
+       "9         0.016           0.224              0.467           0.161   \n",
+       "\n",
+       "   ProtectOptimal  Total  \n",
+       "1           0.186    1.0  \n",
+       "3           0.086    1.0  \n",
+       "5           0.115    1.0  \n",
+       "7           0.095    1.0  \n",
+       "9           0.132    1.0  "
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.round(dfs[scen][[\"FloodOptimal\",\"WetlandOptimal\",\"InundationOptimal\",\"RetreatOptimal\",\"ProtectOptimal\",\"Total\"]].iloc[idx_plot].div(dfs[scen].Total.iloc[idx_plot],axis=0),3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FloodOptimal         0.03\n",
+      "WetlandOptimal       0.09\n",
+      "InundationOptimal    0.72\n",
+      "RetreatOptimal       0.08\n",
+      "ProtectOptimal       0.09\n",
+      "Total                1.00\n",
+      "Name: 9, dtype: float64\n",
+      "FloodOptimal         0.03\n",
+      "WetlandOptimal       0.23\n",
+      "InundationOptimal    0.51\n",
+      "RetreatOptimal       0.17\n",
+      "ProtectOptimal       0.06\n",
+      "Total                1.00\n",
+      "Name: 9, dtype: float64\n",
+      "FloodOptimal         0.06\n",
+      "WetlandOptimal       0.22\n",
+      "InundationOptimal    0.49\n",
+      "RetreatOptimal       0.14\n",
+      "ProtectOptimal       0.08\n",
+      "Total                1.00\n",
+      "Name: 9, dtype: float64\n",
+      "FloodOptimal         0.02\n",
+      "WetlandOptimal       0.22\n",
+      "InundationOptimal    0.47\n",
+      "RetreatOptimal       0.16\n",
+      "ProtectOptimal       0.13\n",
+      "Total                1.00\n",
+      "Name: 9, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for scen in scenarios:\n",
+    "    print(np.round(dfs[scen][[\"FloodOptimal\",\"WetlandOptimal\",\"InundationOptimal\",\"RetreatOptimal\",\"ProtectOptimal\",\"Total\"]].iloc[idx_plot[-1]].div(dfs[scen].Total.iloc[idx_plot[-1]],axis=0),2))"
    ]
   },
   {
@@ -2405,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -2503,7 +2657,7 @@
        "9           435.69        2251.47  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2522,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2532,7 +2686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2791,7 @@
        "9           236.94        1218.89  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2649,7 +2803,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "699.3499999999999"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "334.95+364.40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2928,7 @@
        "9          1124.55        3077.32  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2766,7 +2940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -2871,7 +3045,7 @@
        "9           813.62        2649.50  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2883,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -2988,7 +3162,7 @@
        "9          2086.51        6615.17  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2997,6 +3171,65 @@
     "scen = (5,85); print(scen)\n",
     "np.round(dfs[scen][[\"StormCapitalNoAdapt\",\"StormPopNoAdapt\",\"WetlandNoAdapt\",\"FloodNoAdapt\",\"RelocateNoAdapt\",\"Total NoAdapt\"]].iloc[idx_plot],2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StormCapitalNoAdapt    0.30\n",
+      "StormPopNoAdapt        0.27\n",
+      "WetlandNoAdapt         0.01\n",
+      "FloodNoAdapt           0.22\n",
+      "RelocateNoAdapt        0.19\n",
+      "Total NoAdapt          1.00\n",
+      "Name: 9, dtype: float64\n",
+      "StormCapitalNoAdapt    0.19\n",
+      "StormPopNoAdapt        0.18\n",
+      "WetlandNoAdapt         0.03\n",
+      "FloodNoAdapt           0.23\n",
+      "RelocateNoAdapt        0.37\n",
+      "Total NoAdapt          1.00\n",
+      "Name: 9, dtype: float64\n",
+      "StormCapitalNoAdapt    0.21\n",
+      "StormPopNoAdapt        0.23\n",
+      "WetlandNoAdapt         0.04\n",
+      "FloodNoAdapt           0.21\n",
+      "RelocateNoAdapt        0.31\n",
+      "Total NoAdapt          1.00\n",
+      "Name: 9, dtype: float64\n",
+      "StormCapitalNoAdapt    0.22\n",
+      "StormPopNoAdapt        0.18\n",
+      "WetlandNoAdapt         0.03\n",
+      "FloodNoAdapt           0.25\n",
+      "RelocateNoAdapt        0.32\n",
+      "Total NoAdapt          1.00\n",
+      "Name: 9, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for scen in scenarios:\n",
+    "    print(np.round(dfs[scen][[\"StormCapitalNoAdapt\",\"StormPopNoAdapt\",\"WetlandNoAdapt\",\"FloodNoAdapt\",\"RelocateNoAdapt\",\"Total NoAdapt\"]].iloc[idx_plot[-1]].div(dfs[scen][\"Total NoAdapt\"].iloc[idx_plot[-1]],axis=0),2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
