final sensitivity experiments

--- a/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
+++ b/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
@@ -3174,6 +3174,289 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 85)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>NoAdapt</th>\n",
+       "      <th>Optimal</th>\n",
+       "      <th>FloodNoAdapt</th>\n",
+       "      <th>WetlandNoAdapt</th>\n",
+       "      <th>RelocateNoAdapt</th>\n",
+       "      <th>StormCapitalNoAdapt</th>\n",
+       "      <th>StormPopNoAdapt</th>\n",
+       "      <th>RetreatOptimal</th>\n",
+       "      <th>ProtectOptimal</th>\n",
+       "      <th>InundationOptimal</th>\n",
+       "      <th>WetlandOptimal</th>\n",
+       "      <th>FloodOptimal</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Total NoAdapt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>257.64</td>\n",
+       "      <td>8.80</td>\n",
+       "      <td>86.55</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>161.79</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>7.47</td>\n",
+       "      <td>9.73</td>\n",
+       "      <td>25.83</td>\n",
+       "      <td>9.11</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>52.41</td>\n",
+       "      <td>257.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>819.91</td>\n",
+       "      <td>32.11</td>\n",
+       "      <td>270.65</td>\n",
+       "      <td>25.56</td>\n",
+       "      <td>494.30</td>\n",
+       "      <td>14.52</td>\n",
+       "      <td>14.89</td>\n",
+       "      <td>8.03</td>\n",
+       "      <td>9.73</td>\n",
+       "      <td>30.12</td>\n",
+       "      <td>27.14</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>75.72</td>\n",
+       "      <td>819.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1568.69</td>\n",
+       "      <td>70.00</td>\n",
+       "      <td>443.86</td>\n",
+       "      <td>52.74</td>\n",
+       "      <td>760.22</td>\n",
+       "      <td>155.76</td>\n",
+       "      <td>156.11</td>\n",
+       "      <td>8.53</td>\n",
+       "      <td>9.73</td>\n",
+       "      <td>36.09</td>\n",
+       "      <td>53.60</td>\n",
+       "      <td>5.66</td>\n",
+       "      <td>113.61</td>\n",
+       "      <td>1568.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2441.43</td>\n",
+       "      <td>321.00</td>\n",
+       "      <td>564.36</td>\n",
+       "      <td>80.97</td>\n",
+       "      <td>887.86</td>\n",
+       "      <td>477.04</td>\n",
+       "      <td>431.19</td>\n",
+       "      <td>49.91</td>\n",
+       "      <td>44.23</td>\n",
+       "      <td>169.60</td>\n",
+       "      <td>81.48</td>\n",
+       "      <td>19.39</td>\n",
+       "      <td>364.61</td>\n",
+       "      <td>2441.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3256.53</td>\n",
+       "      <td>342.53</td>\n",
+       "      <td>705.53</td>\n",
+       "      <td>107.00</td>\n",
+       "      <td>1029.77</td>\n",
+       "      <td>759.54</td>\n",
+       "      <td>654.68</td>\n",
+       "      <td>51.21</td>\n",
+       "      <td>44.23</td>\n",
+       "      <td>177.34</td>\n",
+       "      <td>107.46</td>\n",
+       "      <td>5.90</td>\n",
+       "      <td>386.14</td>\n",
+       "      <td>3256.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4305.38</td>\n",
+       "      <td>378.50</td>\n",
+       "      <td>957.04</td>\n",
+       "      <td>134.52</td>\n",
+       "      <td>1377.93</td>\n",
+       "      <td>1000.90</td>\n",
+       "      <td>834.99</td>\n",
+       "      <td>52.54</td>\n",
+       "      <td>44.23</td>\n",
+       "      <td>186.78</td>\n",
+       "      <td>134.97</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>422.11</td>\n",
+       "      <td>4305.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>5523.47</td>\n",
+       "      <td>423.01</td>\n",
+       "      <td>1262.88</td>\n",
+       "      <td>164.91</td>\n",
+       "      <td>1796.90</td>\n",
+       "      <td>1251.75</td>\n",
+       "      <td>1047.03</td>\n",
+       "      <td>54.19</td>\n",
+       "      <td>44.23</td>\n",
+       "      <td>198.27</td>\n",
+       "      <td>165.36</td>\n",
+       "      <td>4.57</td>\n",
+       "      <td>466.62</td>\n",
+       "      <td>5523.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>6113.89</td>\n",
+       "      <td>477.83</td>\n",
+       "      <td>1447.52</td>\n",
+       "      <td>197.71</td>\n",
+       "      <td>1929.50</td>\n",
+       "      <td>1394.01</td>\n",
+       "      <td>1145.15</td>\n",
+       "      <td>57.13</td>\n",
+       "      <td>44.23</td>\n",
+       "      <td>210.83</td>\n",
+       "      <td>198.16</td>\n",
+       "      <td>11.10</td>\n",
+       "      <td>521.44</td>\n",
+       "      <td>6113.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>6615.17</td>\n",
+       "      <td>978.32</td>\n",
+       "      <td>1644.48</td>\n",
+       "      <td>228.63</td>\n",
+       "      <td>2086.51</td>\n",
+       "      <td>1472.21</td>\n",
+       "      <td>1183.34</td>\n",
+       "      <td>164.33</td>\n",
+       "      <td>135.20</td>\n",
+       "      <td>476.81</td>\n",
+       "      <td>229.08</td>\n",
+       "      <td>16.51</td>\n",
+       "      <td>1021.93</td>\n",
+       "      <td>6615.17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time  NoAdapt  Optimal  FloodNoAdapt  WetlandNoAdapt  RelocateNoAdapt  \\\n",
+       "0     1     0.00     0.00          0.00            0.00             0.00   \n",
+       "1     2   257.64     8.80         86.55            6.66           161.79   \n",
+       "2     3   819.91    32.11        270.65           25.56           494.30   \n",
+       "3     4  1568.69    70.00        443.86           52.74           760.22   \n",
+       "4     5  2441.43   321.00        564.36           80.97           887.86   \n",
+       "5     6  3256.53   342.53        705.53          107.00          1029.77   \n",
+       "6     7  4305.38   378.50        957.04          134.52          1377.93   \n",
+       "7     8  5523.47   423.01       1262.88          164.91          1796.90   \n",
+       "8     9  6113.89   477.83       1447.52          197.71          1929.50   \n",
+       "9    10  6615.17   978.32       1644.48          228.63          2086.51   \n",
+       "\n",
+       "   StormCapitalNoAdapt  StormPopNoAdapt  RetreatOptimal  ProtectOptimal  \\\n",
+       "0                 0.00             0.00            0.00            0.00   \n",
+       "1                 1.29             1.36            7.47            9.73   \n",
+       "2                14.52            14.89            8.03            9.73   \n",
+       "3               155.76           156.11            8.53            9.73   \n",
+       "4               477.04           431.19           49.91           44.23   \n",
+       "5               759.54           654.68           51.21           44.23   \n",
+       "6              1000.90           834.99           52.54           44.23   \n",
+       "7              1251.75          1047.03           54.19           44.23   \n",
+       "8              1394.01          1145.15           57.13           44.23   \n",
+       "9              1472.21          1183.34          164.33          135.20   \n",
+       "\n",
+       "   InundationOptimal  WetlandOptimal  FloodOptimal    Total  Total NoAdapt  \n",
+       "0               0.00            0.00          0.00     0.00           0.00  \n",
+       "1              25.83            9.11          0.28    52.41         257.64  \n",
+       "2              30.12           27.14          0.70    75.72         819.91  \n",
+       "3              36.09           53.60          5.66   113.61        1568.69  \n",
+       "4             169.60           81.48         19.39   364.61        2441.43  \n",
+       "5             177.34          107.46          5.90   386.14        3256.53  \n",
+       "6             186.78          134.97          3.59   422.11        4305.38  \n",
+       "7             198.27          165.36          4.57   466.62        5523.47  \n",
+       "8             210.83          198.16         11.10   521.44        6113.89  \n",
+       "9             476.81          229.08         16.51  1021.93        6615.17  "
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scen = (5,85); print(scen)\n",
+    "np.round(dfs[scen],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 219,
    "metadata": {},
    "outputs": [
