--- a/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation.ipynb
+++ b/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation.ipynb
@@ -557,11 +557,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Size of uncertainty range with SE+SLR as opposed to percentiles only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2.86\n",
+      "Name: npv, dtype: float64\n",
+      "0    1.99\n",
+      "Name: npv, dtype: float64\n",
+      "0    2.86\n",
+      "Name: npv, dtype: float64\n",
+      "0    4.23\n",
+      "Name: npv, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for scen in scenarios:\n",
+    "    print(np.round( (dfSC[scen].npv.quantile(.95)-dfSC[scen].npv.quantile(.05))/(df95[scen].npv-df05[scen].npv)  ,2))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
